--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
     <!--Akhir Navbar-->
     <!--Jumbotron-->
     <section class="jumbotron text-center">
-      <img src="img/foto.jpg" alt="Agung Darmawan" width="250" class="rounded-circle img-thumbnail" />
+      <img src="img/foto2.jpg" alt="Agung Darmawan" width="250" class="rounded-circle img-thumbnail" />
       <h1 class="display-4">Agung Darmawan</h1>
       <p class="lead">Android & Web Dev Students</p>
       <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
