--- a/index.html
+++ b/index.html
@@ -33,14 +33,9 @@
             <li class="nav-item">
               <a class="nav-link" href="#projects">Projects</a>
             </li>
-            <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">Social Media</a>
-              <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                <li><a class="dropdown-item" href="https://www.instagram.com/gngdrmwn">Instagram</a></li>
-                <li><a class="dropdown-item" href="https://www.twitter.com/abcdefghilovubb">Twitter</a></li>
-                <li><a class="dropdown-item" href="https://wa.me/+62895704001203 ">WhatsApp</a></li>
-              </ul>
-            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="#">Hire Me</a>
+              </li>
           </ul>
         </div>
       </div>
@@ -50,7 +45,12 @@
     <section class="jumbotron text-center">
       <img src="img/foto2.jpg" alt="Agung Darmawan" width="250" class="rounded-circle img-thumbnail" />
       <h1 class="display-4">Agung Darmawan</h1>
-      <p class="lead">Android & Web Dev Students</p>
+      <p class="lead">Web Dev Students</p>
+      <button type="button" class="btn btn-outline-primary"><a href="https://www.linkedin.com/in/agung-darmawan-33257a209"><i class="bi bi-linkedin text-primary"></i></a></button>
+      <button type="button" class="btn btn-outline-danger"><a href="https://www.instagram.com/gngdrmwn"><i class="bi bi-instagram text-danger"></i></a></button>
+      <button type="button" class="btn btn-outline-success"><a href="https://wa.me/+62895704001203"><i class="bi bi-whatsapp text-success"></i></a></button>
+      <button type="button" class="btn btn-outline-info"><a href="https://www.twitter.com/abcdefghilovubb"<i class="bi bi-twitter text-info"></i></a></button>
+      <button type="button" class="btn btn-outline-secondary"><a href="https://Github.com/Gngdrmwn"<i class="bi bi-github text-secondary"></i></a></button>
       <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
         <path
           fill="#ffffff"
