--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     <section class="jumbotron text-center">
       <img src="img/foto2.jpg" alt="Agung Darmawan" width="250" class="rounded-circle img-thumbnail" />
       <h1 class="display-4">Agung Darmawan</h1>
-      <p class="lead">Web Dev Students</p>
+      <p class="lead">Android & Web Dev Students</p>
       <button type="button" class="btn btn-outline-primary"><a href="https://www.linkedin.com/in/agung-darmawan-33257a209"><i class="bi bi-linkedin text-primary"></i></a></button>
       <button type="button" class="btn btn-outline-danger"><a href="https://www.instagram.com/gngdrmwn"><i class="bi bi-instagram text-danger"></i></a></button>
       <button type="button" class="btn btn-outline-success"><a href="https://wa.me/+62895704001203"><i class="bi bi-whatsapp text-success"></i></a></button>
@@ -69,10 +69,10 @@
           </div>
           <div class="row justify-content-center fs-5 text-center">
             <div class="col-md-5">
-              <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Odio unde fuga veritatis minus ipsum qui tempora harum iure molestias. Nobis.</p>
+              <p>Currently studying web development and Android application development with react native, 8th Semester students at Mulia University.</p>
             </div>
             <div class="col-md-5">
-              <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Non error ad aliquam, labore repellendus aut nobis est voluptatem aspernatur!</p>
+                <p>Saat ini sedang mempelajari pengembangan web dan aplikasi Android dengan react native, mahasiswa Semester 8 di Universitas Mulia</p>
             </div>
           </div>
         </div>
