--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
               <a class="nav-link" href="#projects">Projects</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="#">Hire Me</a>
+                <a class="nav-link" href="https://www.linkedin.com/in/agung-darmawan-33257a209/">Hire Me</a>
               </li>
           </ul>
         </div>
