--- a/index.html
+++ b/index.html
@@ -77,6 +77,21 @@
           </div>
         </div>
       </div>
+      <br>
+      <div class="container">
+        <div class="row">
+          <div class="col text-center mb-md-3">
+            <h2>Experiences</h2>
+          </div>
+          <div class="justify-content-center fs-5 text-center">
+            <div class="col">
+                <p class="fs-3">Stasiun Meteorologi Sultan Aji Muhammad Sulaiman Balikpapan (Intern)</p>
+                <p class="fs-5">01 September 2020 - 31 November 2020</p>
+            </div>
+          </div>
+        </div>
+      </div>
+      <br><br>
       <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
         <path
           fill="#273036"
@@ -119,6 +134,7 @@
           </div>
         </div>
       </div>
+      <br><br>
       <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
         <path
           fill="#ffffff"
