--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     <section class="jumbotron text-center">
       <img src="img/foto2.jpg" alt="Agung Darmawan" width="250" class="rounded-circle img-thumbnail" />
       <h1 class="display-4">Agung Darmawan</h1>
-      <p class="lead">Android & Web Dev Students</p>
+      <p class="lead">Android & Web Dev Students | Currently Studying At Universitas Mulia Balikpapan</p>
       <button type="button" class="btn btn-outline-primary"><a href="https://www.linkedin.com/in/agung-darmawan-33257a209"><i class="bi bi-linkedin text-primary"></i></a></button>
       <button type="button" class="btn btn-outline-danger"><a href="https://www.instagram.com/gngdrmwn"><i class="bi bi-instagram text-danger"></i></a></button>
       <button type="button" class="btn btn-outline-success"><a href="https://wa.me/+62895704001203"><i class="bi bi-whatsapp text-success"></i></a></button>
