--- a/index.html
+++ b/index.html
@@ -64,8 +64,8 @@
     <section id="about">
       <div class="container">
         <div class="row">
-          <div class="col text-center mb-md-3">
-            <h2>About Me</h2>
+          <div class="col text-center mb-md-4">
+            <h2>About Me | Tentang Saya</h2>
           </div>
           <div class="row justify-content-center fs-5 text-center">
             <div class="col-md-5">
