--- a/index.html
+++ b/index.html
@@ -113,6 +113,7 @@
               <img src="img/project1.jpg" class="card-img-top" alt="project1" />
               <div class="card-body">
                 <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                <a href="#" class="btn btn-primary">View Details</a>
               </div>
             </div>
           </div>
@@ -121,14 +122,16 @@
               <img src="img/project2.jpg" class="card-img-top" alt="project2" />
               <div class="card-body">
                 <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                <a href="#" class="btn btn-primary">View Details</a>
               </div>
             </div>
           </div>
           <div class="col-md-4 mb-4">
             <div class="card">
-              <img src="img/project3.jpg" class="card-img-top" alt="project3" />
+              <img src="img/project3.jpg" class="card-img-top" alt="project4" />
               <div class="card-body">
                 <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                <a href="#" class="btn btn-primary">View Details</a>
               </div>
             </div>
           </div>
