--- a/index.html
+++ b/index.html
@@ -13,12 +13,13 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.0/font/bootstrap-icons.css" />
 
     <title>Portofolio | Agung Darmawan</title>
+    <link rel="icon" href="img/ico.png">
   </head>
   <body id="home">
     <!-- Navbar -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark shadow-lg fixed-top">
       <div class="container">
-        <a class="navbar-brand" href="#">Portofolio</a>
+        <a class="navbar-brand" href="#"><i class="bi bi-flower3 text-warning"> Portofolio</i></a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -34,7 +35,7 @@
               <a class="nav-link" href="#projects">Projects</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="https://www.linkedin.com/in/agung-darmawan-33257a209/">Hire Me</a>
+                <a class="nav-link" href="https://www.linkedin.com/in/agung-darmawan-33257a209/" style="color:rgb(209, 58, 58)"><b>Hire Me</b></a>
               </li>
           </ul>
         </div>
@@ -137,7 +138,7 @@
           </div>
         </div>
       </div>
-      <br><br>
+      <br><br><br><br><br><br>
       <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
         <path
           fill="#ffffff"
