--- a/Project/projectdetail.html
+++ b/Project/projectdetail.html
@@ -1,10 +1,48 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Example</title>
+    <!-- Required meta tags -->
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <!-- Bootstrap CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous" />
+    <!--Bootstrap Icons-->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.0/font/bootstrap-icons.css" />
+    <!--Local CSS-->
+    <link rel="stylesheet" href="../Project/style.css" />
+    <title>Project Details</title>
+    <link rel="icon" href="../img/ico.png" />
   </head>
-  <body></body>
+  <body id="home">
+    <!--Navbar-->
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark shadow-lg fixed-top">
+      <div class="container">
+        <a class="navbar-brand" href="#"><i class="bi bi-flower3 text-warning"> Portofolio</i></a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+          <ul class="navbar-nav ms-auto">
+            <a class="btn btn-outline-warning" href="../index.html">Back</a>
+          </ul>
+        </div>
+      </div>
+    </nav>
+    <!--Navbar End-->
+    <!--Project Details-->
+    <section class="project text-center">
+      <div class="container-md">
+        <div class="row">
+          <h1 class="display-4" style="padding-bottom: 2rem;">Aplikasi Rekaptiulasi Data Berbasis Java GUI</div>
+        </div>
+        <div class="row">
+          <div class="col">
+            <img src="../Project/img/ss1.png" class="img-fluid" alt="ss1">
+          </div>
+        </div>
+      </div>
+    </section>
+    <!--Akhir Project Details-->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js" integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0" crossorigin="anonymous"></script>
+  </body>
 </html>
