--- a/index.html
+++ b/index.html
@@ -3,15 +3,11 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous" />
-
     <!--Local CSS-->
     <link rel="stylesheet" href="style.css" />
-
     <!--Bootstrap Icons-->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.0/font/bootstrap-icons.css" />
-
     <title>Portofolio | Agung Darmawan</title>
     <link rel="icon" href="img/ico.png">
   </head>
@@ -48,10 +44,10 @@
       <h1 class="display-4">Agung Darmawan</h1>
       <p class="lead">Android & Web Dev Students | Currently Studying At Universitas Mulia Balikpapan</p>
       <button type="button" class="btn btn-outline-primary"><a href="https://www.linkedin.com/in/agung-darmawan-33257a209"><i class="bi bi-linkedin text-primary"></i></a></button>
+      <button type="button" class="btn btn-outline-secondary"><a href="https://Github.com/Gngdrmwn"<i class="bi bi-github text-secondary"></i></a></button>
       <button type="button" class="btn btn-outline-danger"><a href="https://www.instagram.com/gngdrmwn"><i class="bi bi-instagram text-danger"></i></a></button>
       <button type="button" class="btn btn-outline-success"><a href="https://wa.me/+62895704001203"><i class="bi bi-whatsapp text-success"></i></a></button>
       <button type="button" class="btn btn-outline-info"><a href="https://www.twitter.com/abcdefghilovubb"<i class="bi bi-twitter text-info"></i></a></button>
-      <button type="button" class="btn btn-outline-secondary"><a href="https://Github.com/Gngdrmwn"<i class="bi bi-github text-secondary"></i></a></button>
       <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
         <path
           fill="#ffffff"
@@ -111,27 +107,27 @@
         <div class="row justify-content-center">
           <div class="col-md-4 mb-4">
             <div class="card">
-              <img src="img/project1.jpg" class="card-img-top" alt="project1" />
+              <img src="img/BMKG.png" class="card-img-top" alt="project1" />
               <div class="card-body">
-                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                <p class="card-text">Building Java GUI Application for Recap at BMKG Balikapapan.</p>
+                <a href="Project/projectdetail.html" class="btn btn-primary">View Details</a>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-4 mb-4">
+            <div class="card">
+              <img src="img/unavailable.jpg" class="card-img-top" alt="project2" />
+              <div class="card-body">
+                <p class="card-text">Content Currently Unavailable.</p>
                 <a href="#" class="btn btn-primary">View Details</a>
               </div>
             </div>
           </div>
           <div class="col-md-4 mb-4">
             <div class="card">
-              <img src="img/project4.jpg" class="card-img-top" alt="project2" />
+              <img src="img/unavailable.jpg" class="card-img-top" alt="project4" />
               <div class="card-body">
-                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                <a href="#" class="btn btn-primary">View Details</a>
-              </div>
-            </div>
-          </div>
-          <div class="col-md-4 mb-4">
-            <div class="card">
-              <img src="img/project2.jpg" class="card-img-top" alt="project4" />
-              <div class="card-body">
-                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                <p class="card-text">Content Currently Unavailable.</p>
                 <a href="#" class="btn btn-primary">View Details</a>
               </div>
             </div>
@@ -157,7 +153,7 @@
     <!--Akhir About-->
     <!--Footer-->
     <footer class="bg-white text-center pb-5">
-      <p class="text-dark fW-bold">Created with <i class="bi bi-heart-fill text-danger"></i> by <a href="https://instagram.com/gngdrmwn">Agung Darmawan</a></p>
+      <p class="text-dark fW-bold">Created with <i class="bi bi-heart-fill text-danger"></i> by <a href="https://instagram.com/gngdrmwn">Agung Darmawan</a> for you</p>
     </footer>
     <!--Akhir Footer-->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js" integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0" crossorigin="anonymous"></script>
