--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     <!--Akhir Navbar-->
     <!--Jumbotron-->
     <section class="jumbotron text-center">
-      <img src="img/foto2.jpg" alt="Agung Darmawan" width="250" class="rounded-circle img-thumbnail" />
+      <img src="img/foto.jpg" alt="Agung Darmawan" width="250" class="rounded-circle img-thumbnail" />
       <h1 class="display-4">Agung Darmawan</h1>
       <p class="lead">Android & Web Dev Students | Currently Studying At Universitas Mulia Balikpapan</p>
       <button type="button" class="btn btn-outline-primary"><a href="https://www.linkedin.com/in/agung-darmawan-33257a209"><i class="bi bi-linkedin text-primary"></i></a></button>
