View Details Minor Changes

--- a/Project/projectdetail.html
+++ b/Project/projectdetail.html
@@ -30,14 +30,15 @@
     </nav>
     <!--Navbar End-->
     <!--Project Details-->
+    <br /><br /><br /><br /><br /><br />
     <section class="project text-center">
       <div class="container-md">
         <div class="row">
-          <h1 class="display-4" style="padding-bottom: 2rem;">Aplikasi Rekaptiulasi Data Berbasis Java GUI</div>
+          <h4 class="display-5" style="padding-bottom: 2rem">Download Details</h4>
         </div>
         <div class="row">
           <div class="col">
-            <img src="../Project/img/ss1.png" class="img-fluid" alt="ss1">
+            <a class="btn btn-outline-warning" href="#">Oops... Download Currently Unavailable</a>
           </div>
         </div>
       </div>
