--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     <section class="jumbotron text-center">
       <img src="img/foto.jpg" alt="Agung Darmawan" width="250" class="rounded-circle img-thumbnail" />
       <h1 class="display-4">Agung Darmawan</h1>
-      <p class="lead">Android & Web Dev Students | Currently Studying At Universitas Mulia Balikpapan</p>
+      <p class="lead">Android & Web Dev Students | Currently Studying At<a href="https://www.universitasmulia.ac.id" style="text-decoration: none; color: rgb(255, 255, 255);"> Universitas Mulia Balikpapan</a></p>
       <button type="button" class="btn btn-outline-primary"><a href="https://www.linkedin.com/in/agung-darmawan-33257a209"><i class="bi bi-linkedin text-primary"></i></a></button>
       <button type="button" class="btn btn-outline-secondary"><a href="https://Github.com/Gngdrmwn"<i class="bi bi-github text-secondary"></i></a></button>
       <button type="button" class="btn btn-outline-danger"><a href="https://www.instagram.com/gngdrmwn"><i class="bi bi-instagram text-danger"></i></a></button>
