--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
     <!--Akhir About-->
     <!--Footer-->
     <footer class="bg-white text-center pb-5">
-      <p class="text-dark fW-bold">Created with <i class="bi bi-heart-fill text-danger"></i> by <a href="https://instagram.com/gngdrmwn">Agung Darmawan</a> for you</p>
+      <p class="text-dark fW-bold">Created with <i class="bi bi-heart-fill text-danger"></i> by <a href="https://instagram.com/gngdrmwn">Agung Darmawan</a> for Fisa [aw mlu]</p>
     </footer>
     <!--Akhir Footer-->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js" integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0" crossorigin="anonymous"></script>
