--- a/index.html
+++ b/index.html
@@ -8,30 +8,20 @@
     <link rel="stylesheet" href="style.css" />
     <!--Bootstrap Icons-->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.0/font/bootstrap-icons.css" />
-    <title>Portofolio | Agung Darmawan</title>
-    <link rel="icon" href="img/ico.png">
+    <title>Sorryy</title>
   </head>
   <body id="home">
     <!-- Navbar -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark shadow-lg fixed-top">
       <div class="container">
-        <a class="navbar-brand" href="#"><i class="bi bi-flower3 text-warning"> Portofolio</i></a>
+        <a class="navbar-brand" href="#"><i class="bi bi-flower3 text-warning">Permohonan Maaf</i></a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav ms-auto">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="#home">Home</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#about">About</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#projects">Projects</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="https://www.linkedin.com/in/agung-darmawan-33257a209/" style="color:rgb(209, 58, 58)"><b>Hire Me</b></a>
+                <a class="nav-link" href="https://www.linkedin.com/in/agung-darmawan-33257a209/" style="color:rgb(209, 58, 58)"><b>Maafin ya :(</b></a>
               </li>
           </ul>
         </div>
