--- a/index.html
+++ b/index.html
@@ -30,9 +30,8 @@
     <!--Akhir Navbar-->
     <!--Jumbotron-->
     <section class="jumbotron text-center">
-      <img src="img/foto3.jpg" alt="Agung Darmawan" width="250" class="rounded-circle img-thumbnail" />
-      <h1 class="display-4">Agung Darmawan</h1>
-      <p class="lead">Android & Web Dev Students | Currently Studying At<a href="https://www.universitasmulia.ac.id" style="text-decoration: none; color: rgb(255, 255, 255);"> Universitas Mulia Balikpapan</a></p>
+      <h1 class="display-4">Untuk Resta Pristika</h1>
+      <p class="lead">Maaf yaa aku banyak ovethinking yang bikin kamu juga ikutan pusing gara gara akuu, ga makusd gitu kokkk maafin ya pls<a href="https://www.universitasmulia.ac.id" style="text-decoration: none; color: rgb(255, 255, 255);"></a></p>
       <button type="button" class="btn btn-outline-primary"><a href="https://www.linkedin.com/in/agung-darmawan-33257a209"><i class="bi bi-linkedin text-primary"></i></a></button>
       <button type="button" class="btn btn-outline-secondary"><a href="https://Github.com/Gngdrmwn"<i class="bi bi-github text-secondary"></i></a></button>
       <button type="button" class="btn btn-outline-danger"><a href="https://www.instagram.com/gngdrmwn"><i class="bi bi-instagram text-danger"></i></a></button>
