--- a/index.html
+++ b/index.html
@@ -32,11 +32,6 @@
     <section class="jumbotron text-center">
       <h1 class="display-4">Untuk Resta Pristika</h1>
       <p class="lead">Maaf yaa aku banyak ovethinking yang bikin kamu juga ikutan pusing gara gara akuu, ga makusd gitu kokkk maafin ya pls<a href="https://www.universitasmulia.ac.id" style="text-decoration: none; color: rgb(255, 255, 255);"></a></p>
-      <button type="button" class="btn btn-outline-primary"><a href="https://www.linkedin.com/in/agung-darmawan-33257a209"><i class="bi bi-linkedin text-primary"></i></a></button>
-      <button type="button" class="btn btn-outline-secondary"><a href="https://Github.com/Gngdrmwn"<i class="bi bi-github text-secondary"></i></a></button>
-      <button type="button" class="btn btn-outline-danger"><a href="https://www.instagram.com/gngdrmwn"><i class="bi bi-instagram text-danger"></i></a></button>
-      <button type="button" class="btn btn-outline-success"><a href="https://wa.me/+62895704001203"><i class="bi bi-whatsapp text-success"></i></a></button>
-      <button type="button" class="btn btn-outline-info"><a href="https://www.twitter.com/abcdefghilovubb"<i class="bi bi-twitter text-info"></i></a></button>
       <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
         <path
           fill="#ffffff"
@@ -51,14 +46,14 @@
       <div class="container">
         <div class="row">
           <div class="col text-center mb-md-4">
-            <h2>About Me | Tentang Saya</h2>
+            <h2>Aku Gatau Mau Minta Maaf Gimana Lagi</h2>
           </div>
           <div class="row justify-content-center fs-5 text-center">
             <div class="col-md-5">
-              <p>Currently studying web development and Android application development with react native, 8th Semester students at Mulia University.</p>
+              <p>Aku minta maaf pokoknyaaa, semua pikiranku yang over, semua bacotku yang nyakitin, semua salahku yang aku gatau, aku gamau kita berantemm :(</p>
             </div>
             <div class="col-md-5">
-                <p>Saat ini sedang mempelajari pengembangan web dan aplikasi Android dengan react native, mahasiswa Semester 8 di Universitas Mulia</p>
+                <p>Aku juga tadinya gatau kalo kamu lagi pusing, aku nambah nambahin pikiranmu bikin makin mumet, aku juga ga mikirin kalo kamu juga punya kesibukan lain.</p>
             </div>
           </div>
         </div>
