--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav ms-auto">
             <li class="nav-item">
-                <a class="nav-link" href="https://www.linkedin.com/in/agung-darmawan-33257a209/" style="color:rgb(209, 58, 58)"><b>Maafin ya :(</b></a>
-              </li>
+              <a class="nav-link" href="https://www.linkedin.com/in/agung-darmawan-33257a209/" style="color: rgb(209, 58, 58)"><b>Maafin ya :(</b></a>
+            </li>
           </ul>
         </div>
       </div>
@@ -31,7 +31,9 @@
     <!--Jumbotron-->
     <section class="jumbotron text-center">
       <h1 class="display-4">Untuk Resta Pristika</h1>
-      <p class="lead">Maaf yaa aku banyak ovethinking yang bikin kamu juga ikutan pusing gara gara akuu, ga makusd gitu kokkk maafin ya pls<a href="https://www.universitasmulia.ac.id" style="text-decoration: none; color: rgb(255, 255, 255);"></a></p>
+      <p class="lead">
+        Maaf yaa aku banyak ovethinking yang bikin kamu juga ikutan pusing gara gara akuu, ga makusd gitu kokkk maafin ya pls<a href="https://www.universitasmulia.ac.id" style="text-decoration: none; color: rgb(255, 255, 255)"></a>
+      </p>
       <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
         <path
           fill="#ffffff"
@@ -53,26 +55,25 @@
               <p>Aku minta maaf pokoknyaaa, semua pikiranku yang over, semua bacotku yang nyakitin, semua salahku yang aku gatau, aku gamau kita berantemm :(</p>
             </div>
             <div class="col-md-5">
-                <p>Aku juga tadinya gatau kalo kamu lagi pusing, aku nambah nambahin pikiranmu bikin makin mumet, aku juga ga mikirin kalo kamu juga punya kesibukan lain.</p>
+              <p>Aku juga tadinya gatau kalo kamu lagi pusing, aku nambah nambahin pikiranmu bikin makin mumet, aku juga ga mikirin kalo kamu juga punya kesibukan lain.</p>
             </div>
           </div>
         </div>
       </div>
-      <br>
+      <br />
       <div class="container">
         <div class="row">
           <div class="col text-center mb-md-3">
-            <h2>Experiences</h2>
+            <h2>Aku dimaafin kan?</h2>
           </div>
           <div class="justify-content-center fs-5 text-center">
             <div class="col">
-                <p class="fs-3">Stasiun Meteorologi Sultan Aji Muhammad Sulaiman Balikpapan (Intern)</p>
-                <p class="fs-5">01 September 2020 - 31 November 2020</p>
+              <p class="fs-3">Semoga kita gada salah paham lagii yaa :( aku pusing takut salah ke kamu juga :(</p>
             </div>
           </div>
         </div>
       </div>
-      <br><br>
+      <br /><br />
       <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
         <path
           fill="#273036"
@@ -118,7 +119,7 @@
           </div>
         </div>
       </div>
-      <br><br><br><br><br><br>
+      <br /><br /><br /><br /><br /><br />
       <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
         <path
           fill="#ffffff"
