--- a/index.html
+++ b/index.html
@@ -86,34 +86,31 @@
       <div class="container">
         <div class="row text-center mb-5">
           <div class="col">
-            <h2 style="color: aliceblue">Recent Projects</h2>
+            <h2 style="color: aliceblue">Resta akuu yang cute</h2>
           </div>
         </div>
         <div class="row justify-content-center">
           <div class="col-md-4 mb-4">
             <div class="card">
-              <img src="img/BMKG.png" class="card-img-top" alt="project1" />
+              <img src="img/r1.jpeg" class="card-img-top" alt="project1" />
               <div class="card-body">
-                <p class="card-text">Building Java GUI Application for Recap at BMKG Balikapapan.</p>
-                <a href="Project/projectdetail.html" class="btn btn-primary">View Details</a>
+                <p class="card-text">1.</p>
               </div>
             </div>
           </div>
           <div class="col-md-4 mb-4">
             <div class="card">
-              <img src="img/unavailable.jpg" class="card-img-top" alt="project2" />
+              <img src="img/r2.jpeg" class="card-img-top" alt="project2" />
               <div class="card-body">
-                <p class="card-text">Content Currently Unavailable.</p>
-                <a href="#" class="btn btn-primary">View Details</a>
+                <p class="card-text">2.</p>
               </div>
             </div>
           </div>
           <div class="col-md-4 mb-4">
             <div class="card">
-              <img src="img/unavailable.jpg" class="card-img-top" alt="project4" />
+              <img src="img/r3.jpeg" class="card-img-top" alt="project4" />
               <div class="card-body">
-                <p class="card-text">Content Currently Unavailable.</p>
-                <a href="#" class="btn btn-primary">View Details</a>
+                <p class="card-text">3.</p>
               </div>
             </div>
           </div>
