--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <!-- Navbar -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark shadow-lg fixed-top">
       <div class="container">
-        <a class="navbar-brand" href="#"><i class="bi bi-flower3 text-warning">Permohonan Maaf</i></a>
+        <a class="navbar-brand" href="#"><i class="bi bi-flower3 text-warning">Horrayyyy!</i></a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
