--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="style.css" />
     <!--Bootstrap Icons-->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.0/font/bootstrap-icons.css" />
-    <title>Sorryy</title>
+    <title>Birthday Card From Me!</title>
   </head>
   <body id="home">
     <!-- Navbar -->
@@ -30,7 +30,7 @@
     <!--Akhir Navbar-->
     <!--Jumbotron-->
     <section class="jumbotron text-center">
-      <h1 class="display-4">Untuk Resta Pristika</h1>
+      <h1 class="display-4">Hey by, Happy Birthday to you :)</h1>
       <p class="lead">
         Maaf yaa aku banyak ovethinking yang bikin kamu juga ikutan pusing gara gara akuu, ga makusd gitu kokkk maafin ya pls<a href="https://www.universitasmulia.ac.id" style="text-decoration: none; color: rgb(255, 255, 255)"></a>
       </p>
