--- a/index.html
+++ b/index.html
@@ -8,21 +8,31 @@
     <link rel="stylesheet" href="style.css" />
     <!--Bootstrap Icons-->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.0/font/bootstrap-icons.css" />
-    <title>Birthday Card From Me!</title>
+    <title>Portofolio | Agung Darmawan</title>
+    <link rel="icon" href="img/ico.png">
   </head>
   <body id="home">
     <!-- Navbar -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark shadow-lg fixed-top">
       <div class="container">
-        <a class="navbar-brand" href="#"><i class="bi bi-flower3 text-warning">Horrayyyy!</i></a>
+        <a class="navbar-brand" href="#"><i class="bi bi-flower3 text-warning"> Portofolio</i></a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav ms-auto">
             <li class="nav-item">
-              <a class="nav-link" href="https://www.linkedin.com/in/agung-darmawan-33257a209/" style="color: rgb(209, 58, 58)"><b>Maafin ya :(</b></a>
+              <a class="nav-link active" aria-current="page" href="#home">Home</a>
             </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#about">About</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#projects">Projects</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="https://www.linkedin.com/in/agung-darmawan-33257a209/" style="color:rgb(209, 58, 58)"><b>Hire Me</b></a>
+              </li>
           </ul>
         </div>
       </div>
@@ -30,17 +40,14 @@
     <!--Akhir Navbar-->
     <!--Jumbotron-->
     <section class="jumbotron text-center">
-      <br />
-      <br />
-      <br />
-      <h1 class="display-4">Hey by, Happy Birthday to you :)</h1>
-      <br />
-      <p class="lead">
-        Maaf yaa aku banyak ovethinking yang bikin kamu juga ikutan pusing gara gara akuu, ga makusd gitu kokkk maafin ya pls<a href="https://www.universitasmulia.ac.id" style="text-decoration: none; color: rgb(255, 255, 255)"></a>
-      </p>
-      <br />
-      <br />
-      <br />
+      <img src="img/foto3.jpg" alt="Agung Darmawan" width="250" class="rounded-circle img-thumbnail" />
+      <h1 class="display-4">Agung Darmawan</h1>
+      <p class="lead">Android & Web Dev Students | Currently Studying At<a href="https://www.universitasmulia.ac.id" style="text-decoration: none; color: rgb(255, 255, 255);"> Universitas Mulia Balikpapan</a></p>
+      <button type="button" class="btn btn-outline-primary"><a href="https://www.linkedin.com/in/agung-darmawan-33257a209"><i class="bi bi-linkedin text-primary"></i></a></button>
+      <button type="button" class="btn btn-outline-secondary"><a href="https://Github.com/Gngdrmwn"<i class="bi bi-github text-secondary"></i></a></button>
+      <button type="button" class="btn btn-outline-danger"><a href="https://www.instagram.com/gngdrmwn"><i class="bi bi-instagram text-danger"></i></a></button>
+      <button type="button" class="btn btn-outline-success"><a href="https://wa.me/+62895704001203"><i class="bi bi-whatsapp text-success"></i></a></button>
+      <button type="button" class="btn btn-outline-info"><a href="https://www.twitter.com/abcdefghilovubb"<i class="bi bi-twitter text-info"></i></a></button>
       <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
         <path
           fill="#ffffff"
@@ -55,32 +62,33 @@
       <div class="container">
         <div class="row">
           <div class="col text-center mb-md-4">
-            <h2>Aku Gatau Mau Minta Maaf Gimana Lagi</h2>
+            <h2>About Me | Tentang Saya</h2>
           </div>
           <div class="row justify-content-center fs-5 text-center">
             <div class="col-md-5">
-              <p>Aku minta maaf pokoknyaaa, semua pikiranku yang over, semua bacotku yang nyakitin, semua salahku yang aku gatau, aku gamau kita berantemm :(</p>
+              <p>Currently studying web development and Android application development with react native, 8th Semester students at Mulia University.</p>
             </div>
             <div class="col-md-5">
-              <p>Aku juga tadinya gatau kalo kamu lagi pusing, aku nambah nambahin pikiranmu bikin makin mumet, aku juga ga mikirin kalo kamu juga punya kesibukan lain.</p>
+                <p>Saat ini sedang mempelajari pengembangan web dan aplikasi Android dengan react native, mahasiswa Semester 8 di Universitas Mulia</p>
             </div>
           </div>
         </div>
       </div>
-      <br />
+      <br>
       <div class="container">
         <div class="row">
           <div class="col text-center mb-md-3">
-            <h2>Aku dimaafin kan?</h2>
+            <h2>Experiences</h2>
           </div>
           <div class="justify-content-center fs-5 text-center">
             <div class="col">
-              <p class="fs-3">Semoga kita gada salah paham lagii yaa :( aku pusing takut salah ke kamu juga :(</p>
+                <p class="fs-3">Stasiun Meteorologi Sultan Aji Muhammad Sulaiman Balikpapan (Intern)</p>
+                <p class="fs-5">01 September 2020 - 31 November 2020</p>
             </div>
           </div>
         </div>
       </div>
-      <br /><br />
+      <br><br>
       <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
         <path
           fill="#273036"
@@ -93,37 +101,40 @@
       <div class="container">
         <div class="row text-center mb-5">
           <div class="col">
-            <h2 style="color: aliceblue">Resta akuu yang cute</h2>
+            <h2 style="color: aliceblue">Recent Projects</h2>
           </div>
         </div>
         <div class="row justify-content-center">
           <div class="col-md-4 mb-4">
             <div class="card">
-              <img src="img/r1.jpeg" class="card-img-top" alt="project1" />
+              <img src="img/BMKG.png" class="card-img-top" alt="project1" />
               <div class="card-body">
-                <p class="card-text">1.</p>
+                <p class="card-text">Building Java GUI Application for Recap at BMKG Balikapapan.</p>
+                <a href="Project/projectdetail.html" class="btn btn-primary">View Details</a>
               </div>
             </div>
           </div>
           <div class="col-md-4 mb-4">
             <div class="card">
-              <img src="img/r2.jpeg" class="card-img-top" alt="project2" />
+              <img src="img/unavailable.jpg" class="card-img-top" alt="project2" />
               <div class="card-body">
-                <p class="card-text">2.</p>
+                <p class="card-text">Content Currently Unavailable.</p>
+                <a href="#" class="btn btn-primary">View Details</a>
               </div>
             </div>
           </div>
           <div class="col-md-4 mb-4">
             <div class="card">
-              <img src="img/r3.jpeg" class="card-img-top" alt="project4" />
+              <img src="img/unavailable.jpg" class="card-img-top" alt="project4" />
               <div class="card-body">
-                <p class="card-text">3.</p>
+                <p class="card-text">Content Currently Unavailable.</p>
+                <a href="#" class="btn btn-primary">View Details</a>
               </div>
             </div>
           </div>
         </div>
       </div>
-      <br /><br /><br /><br /><br /><br />
+      <br><br><br><br><br><br>
       <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
         <path
           fill="#ffffff"
