--- a/index.html
+++ b/index.html
@@ -45,8 +45,8 @@
       <p class="lead">Android & Web Dev Students | Currently Studying At<a href="https://www.universitasmulia.ac.id" style="text-decoration: none; color: rgb(255, 255, 255);"> Universitas Mulia Balikpapan</a></p>
       <button type="button" class="btn btn-outline-primary"><a href="https://www.linkedin.com/in/agung-darmawan-33257a209"><i class="bi bi-linkedin text-primary"></i></a></button>
       <button type="button" class="btn btn-outline-secondary"><a href="https://Github.com/Gngdrmwn"<i class="bi bi-github text-secondary"></i></a></button>
-      <button type="button" class="btn btn-outline-danger"><a href="https://www.instagram.com/gngdrmwn"><i class="bi bi-instagram text-danger"></i></a></button>
-      <button type="button" class="btn btn-outline-success"><a href="https://wa.me/+62895704001203"><i class="bi bi-whatsapp text-success"></i></a></button>
+      <button type="button" class="btn btn-outline-danger"><a href="https://www.instagram.com/gngdrmwn"<i class="bi bi-instagram text-danger"></i></a></button>
+      <button type="button" class="btn btn-outline-success"><a href="https://wa.me/+62895704001203"<i class="bi bi-whatsapp text-success"></i></a></button>
       <button type="button" class="btn btn-outline-info"><a href="https://www.twitter.com/abcdefghilovubb"<i class="bi bi-twitter text-info"></i></a></button>
       <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
         <path
@@ -116,9 +116,9 @@
           </div>
           <div class="col-md-4 mb-4">
             <div class="card">
-              <img src="img/unavailable.jpg" class="card-img-top" alt="project2" />
+              <img src="img/iotcertificate.PNG" class="card-img-top" alt="project2" />
               <div class="card-body">
-                <p class="card-text">Content Currently Unavailable.</p>
+                <p class="card-text">Internet Of Things Introduction Certificate</p>
                 <a href="#" class="btn btn-primary">View Details</a>
               </div>
             </div>
