--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     <section class="jumbotron text-center">
       <img src="img/foto3.jpg" alt="Agung Darmawan" width="250" class="rounded-circle img-thumbnail" />
       <h1 class="display-4">Agung Darmawan</h1>
-      <p class="lead">Android & Web Dev Students | Currently Studying At<a href="https://www.universitasmulia.ac.id" style="text-decoration: none; color: rgb(255, 255, 255);"> Universitas Mulia Balikpapan</a></p>
+      <p class="lead">Fresh Graduate | Teknik Informatika At<a href="https://www.universitasmulia.ac.id" style="text-decoration: none; color: rgb(255, 255, 255);"> Universitas Mulia Balikpapan</a></p>
       <button type="button" class="btn btn-outline-primary"><a href="https://www.linkedin.com/in/agung-darmawan-33257a209"><i class="bi bi-linkedin text-primary"></i></a></button>
       <button type="button" class="btn btn-outline-secondary"><a href="https://Github.com/Gngdrmwn"<i class="bi bi-github text-secondary"></i></a></button>
       <button type="button" class="btn btn-outline-danger"><a href="https://www.instagram.com/gngdrmwn"<i class="bi bi-instagram text-danger"></i></a></button>
@@ -153,7 +153,7 @@
     <!--Akhir About-->
     <!--Footer-->
     <footer class="bg-white text-center pb-5">
-      <p class="text-dark fW-bold">Created with <i class="bi bi-heart-fill text-danger"></i> by <a href="https://instagram.com/gngdrmwn">Agung Darmawan</a> Only For Resta</p>
+      <p class="text-dark fW-bold">Created with <i class="bi bi-heart-fill text-danger"></i> by <a href="https://instagram.com/gngdrmwn">Agung Darmawan</a></p>
     </footer>
     <!--Akhir Footer-->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js" integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0" crossorigin="anonymous"></script>
