--- a/index.html
+++ b/index.html
@@ -66,10 +66,10 @@
           </div>
           <div class="row justify-content-center fs-5 text-center">
             <div class="col-md-5">
-              <p>Currently studying web development and Android application development with react native, 8th Semester students at Mulia University.</p>
+              <p>NULL</p>
             </div>
             <div class="col-md-5">
-                <p>Saat ini sedang mempelajari pengembangan web dan aplikasi Android dengan react native, mahasiswa Semester 8 di Universitas Mulia</p>
+                <p>NULL</p>
             </div>
           </div>
         </div>
