--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
       <div class="container">
         <div class="row text-center mb-5">
           <div class="col">
-            <h2 style="color: aliceblue">Recent Projects</h2>
+            <h2 style="color: aliceblue">Recent Projects & Certificate</h2>
           </div>
         </div>
         <div class="row justify-content-center">
@@ -118,16 +118,16 @@
             <div class="card">
               <img src="img/iotcertificate.PNG" class="card-img-top" alt="project2" />
               <div class="card-body">
-                <p class="card-text">Internet Of Things Introduction Certificate</p>
+                <p class="card-text">IoT Introduction Certificate</p>
                 <a href="#" class="btn btn-primary">View Details</a>
               </div>
             </div>
           </div>
           <div class="col-md-4 mb-4">
             <div class="card">
-              <img src="img/unavailable.jpg" class="card-img-top" alt="project4" />
+              <img src="img/network.jpg" class="card-img-top" alt="project4" />
               <div class="card-body">
-                <p class="card-text">Content Currently Unavailable.</p>
+                <p class="card-text">Introduction To Network Certificate Cisco</p>
                 <a href="#" class="btn btn-primary">View Details</a>
               </div>
             </div>
