--- a/index.html
+++ b/index.html
@@ -127,8 +127,8 @@
             <div class="card">
               <img src="img/network.jpg" class="card-img-top" alt="project4" />
               <div class="card-body">
-                <p class="card-text">Introduction To Network Certificate Cisco</p>
-                <a href="#" class="btn btn-primary">View Details</a>
+                <p class="card-text">CCNAv7 : Introduction To Network Certificate Cisco</p>
+                <a href="detail3.html" class="btn btn-primary">View Details</a>
               </div>
             </div>
           </div>
