--- a/detail3.html
+++ b/detail3.html
@@ -11,6 +11,6 @@
         <link rel="icon" href="img/ico.png">
     </head>
     <body>
-        <img src="img/network.jpg" alt="Network Certificate" width="250" class="rounded-circle img-thumbnail" />
+        <img src="img/network.jpg" alt="Network Certificate" width="auto"/>
     </body>
 </html>
