--- a/detail3.html
+++ b/detail3.html
@@ -11,6 +11,6 @@
         <link rel="icon" href="img/ico.png">
     </head>
     <body>
-        <img src="img/network.jpg" alt="Network Certificate" width="auto"/>
+        <img src="img/network.jpg" class="img-fluid" alt="network"/>
     </body>
 </html>
