--- a/detail3.html
+++ b/detail3.html
@@ -11,6 +11,8 @@
         <link rel="icon" href="img/ico.png">
     </head>
     <body>
-        <img src="img/network.jpg" class="img-fluid" alt="network"/>
+        <div class="text-center">
+            <img src="img/network.jpg" class="img-fluid" alt="network"/>
+        </div>
     </body>
 </html>
