--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
               <img src="img/BMKG.png" class="card-img-top" alt="project1" />
               <div class="card-body">
                 <p class="card-text">Building Java GUI Application for Recap at BMKG Balikapapan.</p>
-                <a href="Project/projectdetail.html" class="btn btn-primary">View Details</a>
+                <a href="detail/detail1.html" class="btn btn-primary">View Details</a>
               </div>
             </div>
           </div>
@@ -119,7 +119,7 @@
               <img src="img/iotcertificate.PNG" class="card-img-top" alt="project2" />
               <div class="card-body">
                 <p class="card-text">IoT Introduction Certificate</p>
-                <a href="#" class="btn btn-primary">View Details</a>
+                <a href="detail/detail2.html" class="btn btn-primary">View Details</a>
               </div>
             </div>
           </div>
@@ -128,7 +128,7 @@
               <img src="img/network.jpg" class="card-img-top" alt="project4" />
               <div class="card-body">
                 <p class="card-text">CCNAv7 : Introduction To Network Certificate Cisco</p>
-                <a href="detail3.html" class="btn btn-primary">View Details</a>
+                <a href="detail/detail3.html" class="btn btn-primary">View Details</a>
               </div>
             </div>
           </div>
