--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
           </div>
           <div class="col-md-4 mb-4">
             <div class="card">
-              <img src="img/iotcertificate.PNG" class="card-img-top" alt="project2" />
+              <img src="img/iot.jpg" class="card-img-top" alt="project2" />
               <div class="card-body">
                 <p class="card-text">IoT Introduction Certificate</p>
                 <a href="detail/detail2.html" class="btn btn-primary">View Details</a>
