--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
             <div class="card">
               <img src="img/BMKG.png" class="card-img-top" alt="project1" />
               <div class="card-body">
-                <p class="card-text">Building Java GUI Application for Recap at BMKG Balikapapan.</p>
+                <p class="card-text">Build an application to recapitulate existing regulations at BMKG</p>
                 <a href="detail/detail1.html" class="btn btn-primary">View Details</a>
               </div>
             </div>
