--- a/index.html
+++ b/index.html
@@ -104,9 +104,9 @@
             <h2 style="color: aliceblue">Recent Projects & Certificate</h2>
           </div>
         </div>
-        <div class="row justify-content-center">
+        <div class="row">
           <div class="col-md-4 mb-4">
-            <div class="card">
+            <div class="card h-100">
               <img src="img/BMKG.png" class="card-img-top" alt="project1" />
               <div class="card-body">
                 <p class="card-text">Build an application to recapitulate existing regulations at BMKG</p>
@@ -115,7 +115,7 @@
             </div>
           </div>
           <div class="col-md-4 mb-4">
-            <div class="card">
+            <div class="card h-100">
               <img src="img/iot.jpg" class="card-img-top" alt="project2" />
               <div class="card-body">
                 <p class="card-text">IoT Introduction Certificate</p>
@@ -124,7 +124,7 @@
             </div>
           </div>
           <div class="col-md-4 mb-4">
-            <div class="card">
+            <div class="card h-100">
               <img src="img/network.jpg" class="card-img-top" alt="project3" />
               <div class="card-body">
                 <p class="card-text">CCNAv7 : Introduction To Network Certificate Cisco</p>
@@ -132,6 +132,16 @@
               </div>
             </div>
           </div>
+          <div class="col-md-4 mb-4">
+            <div class="card h-100">
+              <img src="img/duniaac2.png" class="card-img-top" alt="project1" />
+              <div class="card-body">
+                <p class="card-text">Build a company website <a href="http://duniaac.000webhostapp.com" class="text-decoration-none">See website</a></p>
+                <a href="https://github.com/Gngdrmwn/duniaac" class="btn btn-primary">View Details</a>
+              </div>
+            </div>
+          </div>
+        </div>
         </div>
       </div>
       <br><br><br><br><br><br>
