update about me

--- a/index.html
+++ b/index.html
@@ -66,10 +66,10 @@
           </div>
           <div class="row justify-content-center fs-5 text-center">
             <div class="col-md-5">
-              <p>-</p>
+              <p>Fresh graduate teknik informatika yang tertarik untuk terus mendalami bidang pemrograman web dan aplikasi mobile</p>
             </div>
             <div class="col-md-5">
-              <p>-</p>
+              <p>Informatic Fresh graduate who are interested in exploring the field of web programming and mobile applications</p>
             </div>
           </div>
         </div>
