--- a/index.html
+++ b/index.html
@@ -86,6 +86,12 @@
                 <p class="fs-5">01 September 2020 - 31 November 2020</p>
             </div>
           </div>
+          <div class="justify-content-center fs-5 text-center">
+            <div class="col">
+                <p class="fs-3">CV.Sila Teknologi Utama (Programmer)</p>
+                <p class="fs-5">21 Oktober 2021 - 20 Januari 2022</p>
+            </div>
+          </div>
         </div>
       </div>
       <br><br>
