--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
           </div>
           <div class="justify-content-center fs-5 text-center">
             <div class="col">
-                <p class="fs-3">Stasiun Meteorologi Sultan Aji Muhammad Sulaiman Balikpapan (Intern)</p>
+                <p class="fs-3">BMKG Balikpapan (Staff Administrasi - Magang)</p>
                 <p class="fs-5">01 September 2020 - 31 November 2020</p>
             </div>
           </div>
