--- a/index.html
+++ b/index.html
@@ -92,6 +92,12 @@
                 <p class="fs-5">21 Oktober 2021 - 20 Januari 2022</p>
             </div>
           </div>
+          <div class="justify-content-center fs-5 text-center">
+            <div class="col">
+                <p class="fs-3">PT.Travelsya Wistata Indonesia (Staff IT)</p>
+                <p class="fs-5">1 Maret 2022 - Present</p>
+            </div>
+          </div>
         </div>
       </div>
       <br><br>
