--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
       <img src="img/foto3.jpg" alt="Agung Darmawan" width="250" class="rounded-circle img-thumbnail" />
       <h1 class="display-4">Agung Darmawan</h1>
       <p class="lead">Bachelor Degree | Teknik Informatika At<a href="https://www.universitasmulia.ac.id" style="text-decoration: none; color: rgb(255, 255, 255);"> Universitas Mulia Balikpapan</a></p>
-      <p class="lead">Web Programmer At<a href="#" style="text-decoration: none; color: rgb(255, 255, 255);"> Karsa Mulia Sejahtera</a> Support For Komatsu Remanufacturing Asia</p>
+      <small class="lead">Web Programmer At<a href="#" style="text-decoration: none; color: rgb(255, 255, 255);"> Karsa Mulia Sejahtera</a> Support For Komatsu Remanufacturing Asia</small>
       <button type="button" class="btn btn-outline-primary"><a href="https://www.linkedin.com/in/agung-darmawan-33257a209"><i class="bi bi-linkedin text-primary"></i></a></button>
       <button type="button" class="btn btn-outline-secondary"><a href="https://Github.com/Gngdrmwn"<i class="bi bi-github text-secondary"></i></a></button>
       <button type="button" class="btn btn-outline-danger"><a href="https://www.instagram.com/gngdarmawan"<i class="bi bi-instagram text-danger"></i></a></button>
