--- a/index.html
+++ b/index.html
@@ -96,7 +96,13 @@
           <div class="justify-content-center fs-5 text-center">
             <div class="col">
                 <p class="fs-3">PT.Travelsya Wistata Indonesia (Staff IT)</p>
-                <p class="fs-5">1 Maret 2022 - Present</p>
+                <p class="fs-5">1 Maret 2022 - 30 Juli</p>
+            </div>
+          </div>
+          <div class="justify-content-center fs-5 text-center">
+            <div class="col">
+                <p class="fs-3">PT.Karsa Mulia Sejahtera (Web Programmer || IT Engineer)</p>
+                <p class="fs-5">1 Agustus - Sekarang</p>
             </div>
           </div>
         </div>
