--- a/index.html
+++ b/index.html
@@ -101,8 +101,8 @@
           </div>
           <div class="justify-content-center fs-5 text-center">
             <div class="col">
-                <p class="fs-3">PT.Karsa Mulia Sejahtera (Web Programmer || IT Engineer)</p>
-                <p class="fs-5">1 Agustus - Sekarang</p>
+                <p class="fs-3">PT.Karsa Mulia Sejahtera (Web Programmer - IT Engineer)</p>
+                <p class="fs-5">1 Agustus 2022 - Sekarang</p>
             </div>
           </div>
         </div>
